# deribit-smile-stuff

./: .env.example  .gitignore  BUGS.md  BUGS_AND_IMPROVEMENTS.md  COLOR_PALETTE.md  Option Chain Visual Spec.md  PLAN.md  launch.bat  pyproject.toml  sabr_greeks.py  test.ipynb
backend/: backfill.py  chain.py  fit.py  history.py  iv.py  main.py  ratelimit.py  vol_time.py
backend/calibration/: __init__.py  _smr.py  buckets.py  calibrator.py  constants.py  registry.py  rho_smr.py  sabr_alpha_frozen.py  sabr_naive.py  types.py  weights.py
backend/curves/: __init__.py  _fwd_var.py  builder.py  dmr.py  dmr_builders.py  registry.py
backend/venues/: base.py  bloomberg.py  registry.py
backend/venues/deribit/: adapter.py  auth.py  rest_client.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/calibration/: index.ts  sabr.ts
frontend/src/components/: ModelPicker.tsx  StatusPill.tsx
frontend/src/hooks/: useDefaultModel.ts  useQuickPricer.ts  useSubscription.ts  useTheme.ts
frontend/src/shared/: black76.ts  calendarPresets.ts  currencyAccent.ts  expiry.ts  methodology.ts  overlayUi.ts  volTime.ts
frontend/src/shell/: DockShell.tsx  layoutPersistence.ts  widgetRegistry.ts
frontend/src/styles/: theme.css
frontend/src/widgets/: ChainTable.tsx  ModelHealth.tsx  Notes.tsx  QuickPricer.tsx  SmileChart.tsx  TermStructureChart.tsx  VolCalendar.tsx
frontend/src/worker/: bucketsService.ts  busService.ts  calendarService.ts  chainService.ts  historyService.ts  hrtWorker.ts  (+7 more)
tests/: test_calibration_math.py
(+8 files in other folders)
